Causeview Package Complete/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actionpage_Auto_Email_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actionpage Auto Email Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Appeal__r.Id, Appeal__r.Appeal_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>No longer used by CauseView</description>
        <label>(dep)</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>DEPRECATED</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Gift_Amount__c</fullName>
        <description>Overall_Gift_Amount__c /  NumberSent</description>
        <formula>IF (Overall_Gift_Count__c = 0, 0, Overall_Gift_Amount__c /  Overall_Gift_Count__c)</formula>
        <inlineHelpText>The average $ amount of Gifts received</inlineHelpText>
        <label>Average Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sporting Event</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Used to code Campaigns/Appeals/Events</description>
        <inlineHelpText>Code for Campaign, Appeal or Event</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Event primary contact&apos;s email address - retreived from contact record.</description>
        <formula>Event_Primary_Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Event primary contact&apos;s phone number - retreived from contact record.</description>
        <formula>Event_Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Response__c</fullName>
        <formula>IF(Overall_Gift_Count__c&gt; 0, ActualCost  /  Overall_Gift_Count__c, 
IF(ISBLANK(Overall_Gift_Count__c), NULL, 0))</formula>
        <label>Cost Per Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Solicitation__c</fullName>
        <description>Actual Cost / Number Sent</description>
        <formula>IF (NumberSent &gt; 0, ActualCost  /  NumberSent, 
IF(ISBLANK(NumberSent), NULL, 0))</formula>
        <inlineHelpText>Actual Cost / Number Sent</inlineHelpText>
        <label>Cost Per Solicitation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Goal__c</fullName>
        <description>Active revenue goal for fiscal year - roll up from Goals</description>
        <inlineHelpText>Active revenue goal for fiscal year - roll up from Goals</inlineHelpText>
        <label>Current Fiscal Goal</label>
        <summarizedField>Goal__c.Total_Fiscal_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Goal__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Campaign_Appeal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Gift_Amount__c</fullName>
        <label>Default Gift Amount</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Email__c</fullName>
        <description>Event email for publication purposes</description>
        <inlineHelpText>Event email for publication purposes</inlineHelpText>
        <label>Event Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Fee_Formated__c</fullName>
        <formula>Event_Fee__c</formula>
        <label>Event Fee Formated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Fee__c</fullName>
        <inlineHelpText>Fee per attendee</inlineHelpText>
        <label>Event Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <description>Who is the even organizer for publication purposes</description>
        <inlineHelpText>Who is the even organizer for publication purposes</inlineHelpText>
        <label>Event Organizer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Phone__c</fullName>
        <description>Event phone for publication purposes</description>
        <inlineHelpText>Event phone for publication purposes</inlineHelpText>
        <label>Event Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary content for the event.</description>
        <label>Event Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <description>Event website for publication purposes</description>
        <inlineHelpText>Event website for publication purposes</inlineHelpText>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expected_Payment_Date__c</fullName>
        <label>Expected Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Campaign_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_URL__c</fullName>
        <label>Actionpage Failure URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label>Female</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fiscal_Goal_Achieved_to_Date__c</fullName>
        <formula>IF(Current_Fiscal_Goal__c &gt; 0, Overall_Gifts_for_Current_Fiscal__c /  Current_Fiscal_Goal__c,
IF(ISBLANK(Current_Fiscal_Goal__c), NULL, 0))</formula>
        <inlineHelpText>The percentage of the current fiscal goal that has been reached so far.</inlineHelpText>
        <label>Fiscal Goal Achieved to Date (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <description>Displays name for Fund populated in Lookup field</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;   Fund__r.Id  , Fund__r.Fund_Name__c, &quot;_self&quot; )</formula>
        <label>Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The designated Fund the Appeal is prompting for</description>
        <inlineHelpText>The designated Fund the Appeal is prompting for</inlineHelpText>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Campaigns/Appeals</relationshipLabel>
        <relationshipName>CampaignsAppeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <description>Total number of Gifts received NOT including child records</description>
        <inlineHelpText>Total number of Gifts received NOT including child records</inlineHelpText>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Count__c</fullName>
        <description>Total number of Gifts received NOT including child records</description>
        <formula>One_Time_Gift_Count__c  +  Recurring_Gift_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of Gifts received NOT including child records</inlineHelpText>
        <label>Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gifts_for_Current_Fiscal__c</fullName>
        <description>Total amount of Gifts received during current fiscal NOT including child records</description>
        <inlineHelpText>Total amount of Gifts received during current fiscal NOT including child records</inlineHelpText>
        <label>Gifts for Current Fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gifts_for_Current_Quarter__c</fullName>
        <description>Total amount of Gifts received during current quarter NOT including child records</description>
        <inlineHelpText>Total amount of Gifts received during current quarter NOT including child records</inlineHelpText>
        <label>Gifts for Current Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_of_Presentation__c</fullName>
        <label>Length of Presentation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selected letter that will be sent to donors when donating to this appeal or event Actionpage</description>
        <inlineHelpText>Selected letter that will be sent to donors when donating to this appeal/event Actionpage</inlineHelpText>
        <label>Letter</label>
        <referenceTo>Letter__c</referenceTo>
        <relationshipLabel>Appeals/Events</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifetime_Goal_Achieved_to_Date__c</fullName>
        <formula>IF(Lifetime_Goal__c &gt; 0, Overall_Gift_Amount__c /  Lifetime_Goal__c, 
IF(ISBLANK(Lifetime_Goal__c), NULL, 0))</formula>
        <label>Lifetime Goal Achieved to Date (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lifetime_Goal__c</fullName>
        <description>Goal over the lifetime of the campaign or appeal</description>
        <inlineHelpText>Goal over the lifetime of the campaign or appeal</inlineHelpText>
        <label>Lifetime Goal</label>
        <summarizedField>Goal__c.Total_Fiscal_Goal__c</summarizedField>
        <summaryForeignKey>Goal__c.Campaign_Appeal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Name of location for event.</description>
        <label>Location Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <label>Male</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Requested__c</fullName>
        <label>Material Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Banners, Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising Toolkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Press Release Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Tips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Materials</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_Attended__c</fullName>
        <inlineHelpText>The number of individuals that attended the event</inlineHelpText>
        <label>Number Attended</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Available__c</fullName>
        <description>Total number of tickets remaining for sale</description>
        <formula>Number_of_Tickets_Planned__c  -   Number_of_Tickets_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Tickets Planned - Number of Tickets Sold</inlineHelpText>
        <label>Number of Tickets Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Registered__c</fullName>
        <inlineHelpText>Number of individuals that have registered for the event</inlineHelpText>
        <label>Number Registered</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_No_Shows__c</fullName>
        <description>Displays the number of registration records set to No Show</description>
        <inlineHelpText>Number of registration records set to No Show</inlineHelpText>
        <label>Number of No Shows</label>
        <summaryFilterItems>
            <field>Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets_Planned__c</fullName>
        <label>Number of Tickets Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets_Sold__c</fullName>
        <description>Total number of tickets sold.  Roll up from Event Levels.</description>
        <label>Number of Tickets Sold</label>
        <summarizedField>Event_Level__c.Tickets_Sold__c</summarizedField>
        <summaryForeignKey>Event_Level__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Gift_Count__c</fullName>
        <description>Total number of One-Time Gifts received NOT including child records</description>
        <inlineHelpText>Total number of One-Time Gifts received NOT including child records</inlineHelpText>
        <label>One-Time Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_or_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related organization or group to event</description>
        <label>Organization or Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Gift_Amount__c</fullName>
        <description>Total amount of Gifts received including all child records</description>
        <inlineHelpText>Total amount of Gifts received including all child records</inlineHelpText>
        <label>Overall Lifetime Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Gift_Count__c</fullName>
        <description>Total number of Gifts received including all child records</description>
        <formula>Overall_One_Time_Gift_Count__c  +  Overall_Recurring_Gift_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of Gifts received including all child records</inlineHelpText>
        <label>Overall Lifetime Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Gifts_for_Current_Fiscal__c</fullName>
        <description>Total amount of Gifts received during current fiscal including all child records</description>
        <inlineHelpText>Total amount of Gifts received during current fiscal including all child records</inlineHelpText>
        <label>Overall Gifts for Current Fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Gifts_for_Current_Quarter__c</fullName>
        <description>Total amount of Gifts received during current quarter including all child records</description>
        <inlineHelpText>Total amount of Gifts received during current quarter including all child records</inlineHelpText>
        <label>Overall Gifts for Current Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_One_Time_Gift_Count__c</fullName>
        <description>Total number of One-Time Gifts received including all child records</description>
        <inlineHelpText>Total number of One-Time Gifts received including all child records</inlineHelpText>
        <label>Overall One-Time Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Recurring_Gift_Count__c</fullName>
        <description>Total number of Recurring Gifts received including all child records</description>
        <inlineHelpText>Total number of Recurring Gifts received including all child records</inlineHelpText>
        <label>Overall Recurring Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies whether the event has a fee to attend.</inlineHelpText>
        <label>Paid Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentAppeal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Appeal is a parent</inlineHelpText>
        <label>Parent Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Date_Time__c</fullName>
        <label>Presentation Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>State/Province</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Additional_Details__c</fullName>
        <description>Additional information about event for publication purposes</description>
        <label>Publication Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Goal__c</fullName>
        <description>Active revenue goal for Q1 of current fiscal year (Roll-up from Goals)</description>
        <inlineHelpText>Active revenue goal for Q1 of current fiscal year (Roll-up from Goals)</inlineHelpText>
        <label>Current Fiscal Q1 Goal</label>
        <summarizedField>Goal__c.Q1_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Goal__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Campaign_Appeal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q2_Goal__c</fullName>
        <description>Active revenue goal for Q2 of current fiscal year (Roll-up from Goals)</description>
        <inlineHelpText>Active revenue goal for Q2 of current fiscal year (Roll-up from Goals)</inlineHelpText>
        <label>Current Fiscal Q2 Goal</label>
        <summarizedField>Goal__c.Q2_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Goal__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Campaign_Appeal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q3_Goal__c</fullName>
        <description>Active revenue goal for Q3 of current fiscal year (Roll-up from Goals)</description>
        <inlineHelpText>Active revenue goal for Q3 of current fiscal year (Roll-up from Goals)</inlineHelpText>
        <label>Current Fiscal Q3 Goal</label>
        <summarizedField>Goal__c.Q3_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Goal__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Campaign_Appeal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Gift_Count__c</fullName>
        <description>Total number of Recurring Gifts received NOT including child records</description>
        <inlineHelpText>Total number of Recurring Gifts received NOT including child records</inlineHelpText>
        <label>Recurring Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_URL__c</fullName>
        <label>Actionpage Success URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Donation__c</fullName>
        <formula>MID(  Sys_FormIDs__c , 0, 15)</formula>
        <label>(dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Event_URL__c</fullName>
        <formula>IF(  Paid_Event__c , MID( Sys_FormIDs__c , 33, 15), MID( Sys_FormIDs__c , 49, 15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_FormIDs__c</fullName>
        <label>(dep)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Free_Event_Public__c</fullName>
        <formula>MID( Sys_FormIDs__c , 65, 15)</formula>
        <label>(dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Free_Event__c</fullName>
        <formula>MID(  Sys_FormIDs__c , 49, 15)</formula>
        <label>(dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Register_URL__c</fullName>
        <formula>IF(Paid_Event__c, Sys_Event_URL__c, Sys_Free_Event_Public__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>volunteer_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>volunteer Position</label>
        <referenceTo>Volunteer_Role__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Fund__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns/Appeals</label>
    </listViews>
    <listViews>
        <fullName>All_Appeals</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Appeal</value>
        </filters>
        <label>All Appeals</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Overall_Gift_Count__c</columns>
        <columns>Overall_Gift_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CVCampaign</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Number_Registered__c</columns>
        <columns>Number_Attended__c</columns>
        <columns>Event_Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Event</value>
        </filters>
        <label>All Events</label>
    </listViews>
    <listViews>
        <fullName>Demo_CampaignsRollup</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Demo CampaignsRollup</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Appeal</fullName>
        <active>true</active>
        <description>A request for funds</description>
        <label>Appeal</label>
    </recordTypes>
    <recordTypes>
        <fullName>CVCampaign</fullName>
        <active>true</active>
        <description>Defines an organizational revenue stream.  Parent to Appeals</description>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>A gathering of constituents for the purpose of fundraising or support</description>
        <label>Event</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>